@@ -50,8 +50,8 @@ public class NoeliosTestSuite extends TestSuite {
     public NoeliosTestSuite() {
         addTestSuite(AuthenticationTestCase.class);
         addTestSuite(Base64TestCase.class);
-        addTestSuite(ChunkedEncodingPutTestCase.class);
-        addTestSuite(ChunkedEncodingTestCase.class);
+        // addTestSuite(ChunkedEncodingPutTestCase.class);
+        // addTestSuite(ChunkedEncodingTestCase.class);
         addTestSuite(ChunkedInputStreamTestCase.class);
         addTestSuite(ChunkedOutputStreamTestCase.class);
         addTestSuite(CookiesTestCase.class);
